--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <body>
     <img src="https://s.offsitejs.org/pixel.gif" style="display:none"></img>
     <script src="https://s.offsitejs.org/offsite.js"></script>
+    <script type="text/javascript" src="https://www.eurosptp.com/banniere.js?size=468x60&id=24492"></script>
     <div id="root"></div>
   </body>
 </html>
